--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "dist/src/index.js",
-        "use": "@vercel/node"
-      }
+        {
+            "src": "./app.js",
+            "use": "@vercel/node"
+        }
     ],
     "routes": [
-      {
-        "src": "/.*",
-        "dest": "/dist/src/index.js"
-      }
+        {
+            "src": "/(.*)",
+            "dest": "/app.js"
+        }
     ]
-  }
+}
