vercel up json change

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-port",
   "version": "0.0.0",
-  "private": true,
+  "main": "app.js",
   "engines": {
     "node": "18.x"
   },
